Switch NLopt to system package and update CMake config
- Se eliminaron los encabezados, bibliotecas y archivos de configuración de CMake incluidos en el paquete NLopt.
- Se actualizó CMakeLists.txt para usar NLopt desde MSYS2 mediante pkg-config
- Se mejoró la configuración del compilador y OpenMP
- Actualización de main.cpp con tests de funcionamiento de cada una de las librerias integradas (Eigen, NLopt, OpenMP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,57 @@
 cmake_minimum_required(VERSION 3.15)
-
-# Nombre del proyecto
 project(nominate_cmodule)
 
-# CAMBIAR A C++14 para compatibilidad
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Añadir flags específicos para MinGW
-if(MINGW)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-endif()
+# Mostrar información del compilador
+message(STATUS "C Compiler: ${CMAKE_C_COMPILER}")
+message(STATUS "C++ Compiler: ${CMAKE_CXX_COMPILER}")
+message(STATUS "C Compiler Version: ${CMAKE_C_COMPILER_VERSION}")
+message(STATUS "C++ Compiler Version: ${CMAKE_CXX_COMPILER_VERSION}")
 
-# Incluir Eigen
+# Buscar OpenMP
+find_package(OpenMP REQUIRED)
+
+# Buscar NLopt (desde MSYS2)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(NLOPT REQUIRED nlopt)
+
+# Incluir directorios
 include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${NLOPT_INCLUDE_DIRS})
 
-# Incluir NLopt
-include_directories(${CMAKE_SOURCE_DIR}/nlopt/include)
-link_directories(${CMAKE_SOURCE_DIR}/nlopt/lib)
-
-# Buscar todos los .cpp en src/
+# Buscar archivos fuente
 file(GLOB CXX_SOURCES "src/*.cpp")
 
 # Crear ejecutable
 add_executable(nominate_cmodule ${CXX_SOURCES})
 
-# Enlazar con NLopt
-target_link_libraries(nominate_cmodule nlopt)
+# Enlazar librerías con NLopt de MSYS2
+target_link_libraries(nominate_cmodule ${NLOPT_LIBRARIES})
+target_link_directories(nominate_cmodule PRIVATE ${NLOPT_LIBRARY_DIRS})
 
-# Asegurar que el target use C++14
+# Configuración OpenMP
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(nominate_cmodule OpenMP::OpenMP_CXX)
+    target_compile_definitions(nominate_cmodule PRIVATE USE_OPENMP)
+    message(STATUS "OpenMP ${OpenMP_CXX_VERSION} encontrado y configurado")
+    message(STATUS "OpenMP flags: ${OpenMP_CXX_FLAGS}")
+else()
+    message(FATAL_ERROR "OpenMP no encontrado. Verifica instalación MSYS2.")
+endif()
+
 target_compile_features(nominate_cmodule PRIVATE cxx_std_14)
+
+# Configuración optimizada
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_compile_options(nominate_cmodule PRIVATE -O3 -march=native)
+endif()
+
+# Información de NLopt
+message(STATUS "NLopt encontrado:")
+message(STATUS "Include dirs: ${NLOPT_INCLUDE_DIRS}")
+message(STATUS "Library dirs: ${NLOPT_LIBRARY_DIRS}")
+message(STATUS "Libraries: ${NLOPT_LIBRARIES}")
